2022-07-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Add sanity checks for font description file generation
	for PDF output device, prompted by discussion with Ingo
	Schwarze.  See <https://lists.gnu.org/archive/html/groff/\
	2022-06/msg00094.html>.

	* font/devpdf/tests/basic-fonts-present.sh:
	* font/devpdf/tests/urw-fonts-present.sh: Add files.

	* font/devpdf/devpdf.am (font_devpdf_TESTS): Add the former test
	unconditionally, and the latter only if `HAVE_URW_FONTS`.

2022-07-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am: Refactor to simplify.  Now that
	symbol.map lives in the "devpdf/generate" directory along with
	the other map files, it doesn't need a dedicated Makefile target
	to produce it.
	(DEVPDFFONTMAP_1, DEVPDFFONTMAP_2): Coalesce and rename to...
	(devpdffontmapdata): ...this.
	(font/devpdf/map/symbol.map:): Drop target.
	(devpdffontmap_DATA, font/devpdf/download): Update dependencies.

2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Recast
	diagnostic message so that the user understands the consequence
	of failure to locate a Type 1 font file (that isn't one of the
	base 14 PostScript level 1 fonts): the font will be unavailable
	for the "pdf" output device.

2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Separate
	lists of Type 1 font names with spaces as well as commas, for
	better diagnostic message readability.  Also begin message in
	lowercase (per GNU Coding Standards).

2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Verify that
	`$foundrypath->[$j]` is defined before operating on it.

2022-07-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	[afmtodit]: Clarify diagnostic message.

	* src/utils/afmtodit/afmtodit.pl: When we have excess Adobe